--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,20 @@ label {
 
 /* ------------------------------------------------------- Projet -------------------------------------------------------- */
 
+  progress {
+    width: 100%;
+    height: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+  }
+
+  
+  progress::-webkit-progress-value {
+    background-image: linear-gradient(to right, #00fd8b,#0eabf3,#0e84f3);
+    
+  }
+
 .content_projet {
   padding: 1rem;
   display: flex;
